# stax

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  justfile  learnings.md  mkdocs.yml  release.toml  skills.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-pages.yml  release.yml  rust-tests.yml
docs/: index.md
docs/commands/: core.md  navigation.md  reference.md  stack-health.md
docs/compatibility/: freephite-graphite.md
docs/concepts/: multiple-stacks.md  stacked-branches.md
docs/configuration/: index.md
docs/getting-started/: install.md  quick-start.md
docs/integrations/: gemini-cli.md  opencode.md  pr-templates-and-ai.md
docs/interface/: tui.md
docs/reference/: benchmarks.md  windows.md
docs/safety/: undo-redo.md
docs/superpowers/specs/: 2026-05-28-ci-oneline-mode-design.md
docs/workflows/: agent-worktrees.md  merge-and-cascade.md  multi-worktree.md  reporting.md
src/: cache.rs  cli.rs  lib.rs  main.rs  remote.rs  update.rs
src/ci/: history.rs
src/cli/: args.rs  interactive.rs  mod.rs  tests.rs
src/commands/: auth.rs  cascade.rs  changelog.rs  checkout.rs  ci.rs  config.rs  continue_cmd.rs  doctor.rs  generate.rs  init.rs  issue.rs  land.rs  log.rs  merge.rs  merge_queue.rs  merge_rebase.rs  merge_remote.rs  merge_when_ready.rs  mod.rs  modify.rs  navigate.rs  pr.rs  refresh.rs  resolve.rs  resolve_pr.rs  restack.rs  restack_parent.rs  shell_setup.rs  split.rs  standup.rs  status.rs  submit.rs  sync.rs  tmux.rs  watch.rs
src/commands/branch/: create.rs  reparent.rs  track.rs
src/commands/upstack/: restack.rs
src/commands/worktree/: cleanup.rs  create.rs  go.rs  mod.rs  remove.rs  shared.rs
src/config/: mod.rs  tests.rs
src/engine/: metadata.rs  stack.rs
src/forge/: gitea.rs  gitlab.rs  mod.rs
src/git/: mod.rs  refs.rs  repo.rs
src/github/: client.rs  mod.rs  pr.rs  pr_template.rs
src/ops/: receipt.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/split/: ui.rs
src/tui/split_hunk/: app.rs  diff_parser.rs  mod.rs  ui.rs
src/tui/widgets/: agents.rs  details.rs  diff.rs  mod.rs  stack_tree.rs
src/tui/worktree/: app.rs  mod.rs  ui.rs
tasks/: lessons.md
tests/: additional_coverage_tests.rs  auth_tests.rs  changelog_tests.rs  cli_tests.rs  command_coverage_tests.rs  doctor_fix_tests.rs  github_list_tests.rs  integration_tests.rs  resolve_tests.rs  restack_provenance_tests.rs  split_hunk_tests.rs  tui_commands_tests.rs  worktree_cli_tests.rs  worktree_tests.rs
tests/common/: mod.rs
