[package]
name = "stax"
version = "0.29.2"
edition = "2021"
default-run = "stax"
description = "Fast stacked Git branches and PRs"
license = "MIT"
authors = ["Cesar Ferreira"]
repository = "https://github.com/cesarferreira/stax"

[lib]
name = "stax"
path = "src/lib.rs"

[[bin]]
name = "stax"
path = "src/main.rs"

[[bin]]
name = "st"
path = "src/bin/st.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Git
git2 = "0.20"

# GitHub API
octocrab = "0.49"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
dialoguer = { version = "0.12", features = ["fuzzy-select", "editor"] }
console = "0.16"
colored = "3"
indicatif = "0.17"
ratatui = "0.29"
crossterm = "0.28"
termimad = "0.31"

# Error handling
anyhow = "1"

# Clipboard
arboard = "3"

# Vendored OpenSSL for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }

# Regex
regex = "1"

# Config
toml = "0.9"
dirs = "6"
chrono = "0.4"

# Update checking
update-informer = "1"

# Temp files
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
