[package]
name = "stax"
version = "0.32.0"
edition = "2021"
default-run = "stax"
description = "Fast stacked Git branches and PRs"
license = "MIT"
authors = ["Cesar Ferreira"]
repository = "https://github.com/cesarferreira/stax"

[lib]
name = "stax"
path = "src/lib.rs"

[[bin]]
name = "stax"
path = "src/main.rs"

[[bin]]
name = "st"
path = "src/bin/st.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Git
git2 = "0.20"

# GitHub API
octocrab = "0.49"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
dialoguer = { version = "0.12", features = ["fuzzy-select", "editor"] }
console = "0.16"
colored = "3"
indicatif = "0.18"
ratatui = "0.30"
crossterm = "0.29"
termimad = "0.34"

# Error handling
anyhow = "1"

# Clipboard
arboard = "3"

# Vendored OpenSSL for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }

# Regex
regex = "1"

# Config
toml = "1"
dirs = "6"
chrono = "0.4"

# Update checking
update-informer = "1"

# Temp files
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# TLS crypto provider (needed to install default provider for tests using octocrab)
rustls = { version = "0.23", features = ["aws_lc_rs"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
