[package]
name = "stax"
version = "0.78.2"
edition = "2021"
default-run = "stax"
description = "Fast stacked Git branches and PRs"
license = "MIT"
authors = ["Cesar Ferreira"]
repository = "https://github.com/cesarferreira/stax"

[lib]
name = "stax"
path = "src/lib.rs"

[[bin]]
name = "stax"
path = "src/main.rs"

[[bin]]
name = "st"
path = "src/bin/st.rs"

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Git (no ssh — we use HTTPS + token auth exclusively)
git2 = { version = "0.20", default-features = false, features = ["https"] }

# GitHub API
octocrab = "0.49"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
dialoguer = { version = "0.12", features = ["fuzzy-select", "editor"] }
console = "0.16"
colored = "3"
fuzzy-matcher = "0.3"
indicatif = "0.18"
ratatui = "0.30"
crossterm = "0.29"
termimad = "0.34"

# Error handling
anyhow = "1"
signal-hook = "0.3"

# Clipboard (text-only — skip image support to avoid pulling in the image crate)
arboard = { version = "3", default-features = false }

# Regex
regex = "1"

# Config
toml = "1"
dirs = "6"
chrono = "0.4"

# Update checking
update-informer = "1"

# Temp files
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }

# TLS crypto provider (needed to install default provider for tests using octocrab)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
